--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,13 @@ jobs:
       with:
         python-version: '3.13'  # Use the version of Python you need
 
+    - name: List files in the repository
+      run: ls -al
+  
+
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt  # Install dependencies from requirements.txt
+        pip install -r requirements.txt
 
     - name: Run build.sh
       run: |
