--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build Python App for Linux
 on:
   push:
     branches:
-      - main  # Trigger on push to main branch (can be changed to your target branch)
+      - main  # Trigger on push to the main branch
 
 jobs:
   build:
@@ -13,18 +13,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: List files in the repository  # Debugging step to list the files
+      run: ls -al  # This will print the file structure
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.13'  # Use the version of Python you need
-
-    - name: List files in the repository
-      run: ls -al
-  
+        python-version: '3.9'  # Use the version of Python you need
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt  # Install dependencies from requirements.txt
 
     - name: Run build.sh
       run: |
@@ -35,7 +35,9 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: linux-executable  # Name of the artifact (will be shown in the Actions tab)
-        path: dist/your_executable  # Path to your final executable after pyinstaller build
+        path: |
+          dist/tkforge-cli  # If the 'cli' argument was passed
+          dist/TkForge      # If no argument (or different argument) was passed
 
     - name: Print download link
       run: |
