--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Update Fedora and install Python
       run: |
         dnf update -y
-        dnf install -y python3 python3-pip git pyinstaller
+        dnf install -y python3 python3-pip git
 
     - name: Checkout code
       uses: actions/checkout@v3
